[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utt-balance"
version = "0.1.0"
description = "A UTT plugin to check worked time balance against daily/weekly targets"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Logan Thomas", email = "logan@datacentriq.net"},
]
keywords = ["utt", "time-tracking", "productivity", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "utt>=1.0",
    "rich>=10.0",
]

[project.urls]
Homepage = "https://github.com/loganthomas/utt-balance"
Repository = "https://github.com/loganthomas/utt-balance"
Issues = "https://github.com/loganthomas/utt-balance/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["utt.*", "utt_balance"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
