[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utt-balance"
version = "0.1.0-rc.1"
description = "A UTT plugin to check worked time balance against daily/weekly targets"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Logan Thomas", email = "logan@datacentriq.net"},
]
keywords = ["utt", "time-tracking", "productivity", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
dependencies = [
    "utt>=1.0",
    "rich>=10.0",
]

[project.urls]
Homepage = "https://github.com/loganthomas/utt-balance"
Repository = "https://github.com/loganthomas/utt-balance"
Issues = "https://github.com/loganthomas/utt-balance/issues"

[project.entry-points."utt.plugins"]
balance = "utt.plugins.balance"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ty>=0.0.1a1",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/utt", "src/utt_balance"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["utt_balance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
